--- a/res/layout/list_dates.xml
+++ b/res/layout/list_dates.xml
@@ -1,47 +1,34 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
- 
-
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#999999"
+        android:layout_marginTop="25dip"
         android:orientation="horizontal" >
 
         <TextView
+            android:id="@+id/date"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Name"
+            android:text="date"
             android:textSize="17dip"
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/total"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Amount"
+            android:text="total"
             android:textSize="17dip"
             android:textStyle="bold" />
 
-        <TextView
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="Instructor"
-            android:textSize="17dip"
-            android:textStyle="bold" />
     </LinearLayout>
-
-    <ListView
-        android:id="@android:id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
