--- a/res/layout/list_dates.xml
+++ b/res/layout/list_dates.xml
@@ -11,7 +11,7 @@
         android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/dates"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
